// 定义proto文件符合proto3语法。
syntax = "proto3";
// 用该proto文件生成的Java文件的包路径。
option java_package = "edu.alibaba.mpc4j.common.rpc.impl.netty.protobuf";
// 用该proto文件生成的Java文件的文件名。
option java_outer_classname = "NettyRpcProtobuf";

message DataPacketProto {
    // 协议由两部分组成：head、payload，分别由HeaderProto和PayloadProto定义。
    HeaderProto headerProto = 1;
    PayloadProto payloadProto = 2;

    // 定义head
    message HeaderProto {
        // 任务ID
        int64 taskId = 1;
        // 协议ID
        int32 ptoId = 2;
        // 步骤ID
        int32 stepId = 3;
        // 补充信息
        int64 extraInfo = 4;
        // 发送方ID
        int32 senderId = 5;
        // 接收方ID
        int32 receiverId = 6;
    }

    // 定义payload
    message PayloadProto {
        // repeated表示可以存在多个（类似数组）
        repeated bytes payloadBytes = 1;
    }
}